--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -2,9 +2,14 @@
 <nav-bar title="智能观心枕" showNavBtn="{{false}}"  bgColor="#35254F" titleColor="#fff"/>
 <view class="container">
   <view class="top-space"></view>
+  <view class="pillow-img-wrapper">
+    <image src="../../static/pillow.png" class="pillow-img"/>
+  </view>
   <view class="device-bar" bind:tap="toBlueIndex">
     <image src="../../static/bluetooth.png" class="icon-bluetooth"/>
-    <text class="device-text">设备未连接</text>
+    <text class="device-text">
+    {{deviceConnected ? ('已连接：' + deviceName) : '设备未连接'}}
+    </text>
     <view class="arrow"></view>
   </view>
   <view class="card-grid">
@@ -28,16 +33,16 @@
         {{breathRate !== null ? breathRate + '次/分' : '--次/分'}}
       </view>
     </view>
-    <!-- 翻身次数 -->
-    <view class="card">
-      <view class="card-header">
-        <image src="../../static/turn_over.png" class="card-icon"/>
-        <text class="card-title">体动次数</text>
-      </view>
-      <view class="card-value">
-        {{turnOver !== null ? turnOver + '次' : '--次'}}
-      </view>
-    </view>
+   <!-- 体动状态 -->
+   <view class="card">
+     <view class="card-header">
+       <image src="../../static/turn_over.png" class="card-icon"/>
+       <text class="card-title">体动</text>
+     </view>
+     <view class="card-value">
+       {{turnOver === 1 ? '有体动' : (turnOver === 0 ? '无体动' : '--')}}
+     </view>
+   </view>
     <!-- 是否离枕 -->
     <view class="card">
       <view class="card-header">
