--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -5,7 +5,26 @@
 }
 
 .top-space {
-  height: 120rpx;
+  height: 20rpx;
+}
+
+.pillow-img-wrapper {
+  width: 90%;
+  /* 高度用padding-top實現等比例，這裡60%是寬度的60% */
+  padding-top: 60%;
+  position: relative;
+  margin: 0 auto 32rpx auto;
+}
+
+.pillow-img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 32rpx;
+  box-shadow: 0 4rpx 24rpx rgba(0,0,0,0.10);
+  background: #fff;
 }
 
 .device-bar {
@@ -14,7 +33,7 @@
   background: #2a1e3a;
   border-radius: 16rpx;
   margin: 0 24rpx 32rpx 24rpx;
-  padding: 16rpx 24rpx;
+  padding: 2rpx;
   color: #fff;
   font-size: 28rpx;
   position: relative;
@@ -23,7 +42,7 @@
 .icon-bluetooth {
   width: 32rpx;
   height: 32rpx;
-  margin-right: 16rpx;
+  margin-left: 16rpx;
 }
 
 .device-text {
@@ -36,7 +55,7 @@
   border-top: 4rpx solid #00bfff;
   border-right: 4rpx solid #00bfff;
   transform: rotate(45deg);
-  margin-left: 16rpx;
+  margin-right: 16rpx;
 }
 
 .card-grid {
