--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,17 +1,17 @@
 <!--pages/home.wxml-->
-<nav-bar title="智能观心枕" showNavBtn="{{false}}"  bgColor="#35254F" titleColor="#fff"/>
+<nav-bar title="智能观心枕" showNavBtn="{{false}}"  bgColor="#083869" titleColor="#fff"/>
 <view class="container">
   <view class="top-space"></view>
   <view class="pillow-img-wrapper">
     <image src="../../static/pillow.png" class="pillow-img"/>
   </view>
   <view class="device-bar" bind:tap="toBlueIndex">
-    <image src="../../static/bluetooth.png" class="icon-bluetooth"/>
+    <image src="../../static/bluetooth_white.png" class="icon-bluetooth"/>
     <text class="device-text">
     {{deviceConnected ? ('已连接：' + deviceName) : '设备未连接'}}
     </text>
-    <view class="arrow"></view>
   </view>
+ 
   <view class="card-grid">
     <!-- 心率 -->
     <view class="card">
@@ -26,7 +26,7 @@
     <!-- 呼吸 -->
     <view class="card">
       <view class="card-header">
-        <image src="../../static/breath_rate.png" class="card-icon"/>
+        <image src="../../static/breath.png" class="card-icon"/>
         <text class="card-title">呼吸</text>
       </view>
       <view class="card-value">
@@ -46,12 +46,13 @@
     <!-- 是否离枕 -->
     <view class="card">
       <view class="card-header">
-        <image src="../../static/leave.png" class="card-icon"/>
+        <image src="../../static/exit.png" class="card-icon"/>
         <text class="card-title">是否离枕</text>
       </view>
       <view class="card-value">
         {{isLeavePillow !== null ? (isLeavePillow ? '是' : '否'):'--'}}
       </view>
     </view>
+    <view class="card-round"/>
   </view>
 </view>
