--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -1,5 +1,5 @@
 .container {
-  background: #33244a;
+  background: #083869;
   min-height: 100vh;
   padding: 0;
 }
@@ -28,14 +28,17 @@
 }
 
 .device-bar {
+  height: 80rpx;
   display: flex;
   align-items: center;
-  background: #2a1e3a;
-  border-radius: 16rpx;
+  border-radius: 60rpx;
+  background: linear-gradient(179.41deg, rgba(163, 151, 116, 1) 41.22%, rgba(194, 178, 129, 1) 73.61%, rgba(204, 188, 141, 1) 94.91%);
   margin: 0 24rpx 32rpx 24rpx;
-  padding: 2rpx;
   color: #fff;
   font-size: 28rpx;
+  font-weight: bold;
+  justify-content: center;
+  opacity: 1;
   position: relative;
 }
 
@@ -46,16 +49,7 @@
 }
 
 .device-text {
-  flex: 1;
-}
-
-.arrow {
-  width: 16rpx;
-  height: 16rpx;
-  border-top: 4rpx solid #00bfff;
-  border-right: 4rpx solid #00bfff;
-  transform: rotate(45deg);
-  margin-right: 16rpx;
+  text-align: center;
 }
 
 .card-grid {
@@ -67,11 +61,12 @@
 
 .card {
   width: 46%;
-  background: #2a1e3a;
+  background: rgba(46, 167, 255, 0.25);
   border-radius: 20rpx;
   margin-bottom: 32rpx;
   padding: 32rpx 0 32rpx 0;
   display: flex;
+  border-radius: 30rpx;
   flex-direction: column;
   align-items: center;
   position: relative;
@@ -89,9 +84,21 @@
   left: 5%;
 }
 
+.card-round{
+left: 10px;
+top: 512px;
+width: 100%;
+height: 255px;
+opacity: 1;
+background: linear-gradient(140deg, rgba(20, 22, 128, 1) 0%, rgba(20, 22, 128, 0) 100%);
+filter: blur(172px);
+}
+
 .card-icon {
   width: 44rpx;
   height: 44rpx;
+  font-weight: bold;
+  color: #fff;
 }
 
 .card-title {
@@ -104,7 +111,7 @@
   margin-top: 72rpx;
   font-size: 32rpx;
   font-weight: bold;
-  color: #b2eaff;
+  color: #E5E5E5;
   align-items: center;
   text-align: center;
   width: 100%;
